apps/production/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-route
  namespace: vaultwarden
spec:
  parentRefs:
  - name: kirintor-gateway
    namespace: kube-system
  hostnames:
  - "vault.kirintor.benjaminmnoer.dk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vaultwarden
      port: 80
      namespace: vaultwarden
